# glacier-polkit-agent

./: CMakeLists.txt  glacier-polkit-agent.service  main.cpp  org.nemomobile.polkitAuthAgent.xml  polkitinterface.cpp  polkitinterface.h
qml/: glacier-polkit-agent.qml
translations/: glacier-polkit-agent.ts  glacier-polkit-agent_cs.ts  glacier-polkit-agent_de.ts  glacier-polkit-agent_pl.ts  glacier-polkit-agent_ru.ts  glacier-polkit-agent_uk.ts
